Update examples and move into cargo projects
This allows us to test examples and confirm that they
are both correct and that they continue to work in
spite of upstream changes.

--- a/src/02_execution/05_io.md
+++ b/src/02_execution/05_io.md
@@ -4,29 +4,7 @@ In the previous section on [The `Future` Trait], we discussed this example of
 a future that performed an asynchronous read on a socket:
 
 ```rust
-struct SocketRead<'a> {
-    socket: &'a Socket,
-}
-
-impl SimpleFuture for SocketRead<'_> {
-    type Output = Vec<u8>;
-
-    fn poll(self: Pin<&mut Self>, lw: &LocalWaker) -> Poll<Self::Output> {
-        if self.socket.has_data_to_read() {
-            // The socket has data-- read it into a buffer and return it.
-            Poll::Ready(self.socket.read_buf())
-        } else {
-            // The socket does not yet have data.
-            //
-            // Arrange for `wake` to be called once data is available.
-            // When data becomes available, `wake` will be called, and the
-            // user of this `Future` will know to call `poll` again and
-            // receive data.
-            self.socket.set_readable_callback(lw);
-            Poll::Pending
-        }
-    }
-}
+{{#include ../../examples/02_02_future_trait/src/lib.rs:28:50}}
 ```
 
 This future will read available data on a socket, and if no data is available,
@@ -105,7 +83,7 @@ event occurs. In the case of our `SocketRead` example above, the
 
 ```rust
 impl Socket {
-    fn set_readable_callback(&self, lw: &LocalWaker) {
+    fn set_readable_callback(&self, waker: Waker) {
         // `local_executor` is a reference to the local executor.
         // this could be provided at creation of the socket, but in practice
         // many executor implementations pass it down through thread local
@@ -117,7 +95,7 @@ impl Socket {
 
         // Store the local waker in the executor's map so that it can be called
         // once the IO event arrives.
-        local_executor.event_map.insert(id, lw.clone());
+        local_executor.event_map.insert(id, waker);
         local_executor.add_io_event_interest(
             &self.socket_file_descriptor,
             Event { id, signals: READABLE },
@@ -127,9 +105,9 @@ impl Socket {
 ```
 
 We can now have just one executor thread which can receive and dispatch any
-IO event to the appropriate `LocalWaker`, which will wake up the corresponding
+IO event to the appropriate `Waker`, which will wake up the corresponding
 task, allowing the executor to drive more tasks to completion before returning
 to check for more IO events (and the cycle continues...).
 
-[The `Future` Trait]: TODO
+[The `Future` Trait]: ./02_future.md
 [`mio`]: https://github.com/carllerche/mio
