Update mdbook and use ANCHOR for code includes

--- a/src/02_execution/05_io.md
+++ b/src/02_execution/05_io.md
@@ -4,7 +4,7 @@ In the previous section on [The `Future` Trait], we discussed this example of
 a future that performed an asynchronous read on a socket:
 
 ```rust
-{{#include ../../examples/02_02_future_trait/src/lib.rs:28:50}}
+{{#include ../../examples/02_02_future_trait/src/lib.rs:socket_read}}
 ```
 
 This future will read available data on a socket, and if no data is available,
