--- a/src/02_execution/05_io.md
+++ b/src/02_execution/05_io.md
@@ -109,4 +109,4 @@ task, allowing the executor to drive more tasks to completion before returning
 to check for more IO events (and the cycle continues...).
 
 [The `Future` Trait]: ./02_future.md
-[`mio`]: https://github.com/carllerche/mio
+[`mio`]: https://github.com/tokio-rs/mio
