--- a/src_zh/02_execution/05_io.md
+++ b/src_zh/02_execution/05_io.md
@@ -1,30 +1,22 @@
-# Executors and System IO
+# 执行器与系统IO
 
-In the previous section on [The `Future` Trait], we discussed this example of
-a future that performed an asynchronous read on a socket:
+在前面[`Future`特质]小节，我们讨论了一个对socket进行异步读取的future例子：
 
 ```rust,no_run
 {{#include ../../examples_zh/02_02_future_trait/src/lib.rs:socket_read}}
 ```
 
-This future will read available data on a socket, and if no data is available,
-it will yield to the executor, requesting that its task be awoken when the
-socket becomes readable again. However, it's not clear from this example how
-the `Socket` type is implemented, and in particular it isn't obvious how the
-`set_readable_callback` function works. How can we arrange for `lw.wake()`
-to be called once the socket becomes readable? One option would be to have
-a thread that continually checks whether `socket` is readable, calling
-`wake()` when appropriate. However, this would be quite inefficient, requiring
-a separate thread for each blocked IO future. This would greatly reduce the
-efficiency of our async code.
+这个future会读取socket上的可用数据，如果没有数据可用，那它会让出执行器，请求在socket
+再次可读时唤醒它的任务。然而，从这个例子里我们不能很清楚知道`Socket`类型是如何实现的，
+尤其是不了解`set_readable_callback`函数如何工作。我们要怎样安排`lw.wake()`方法在一旦
+socket变得可用时调用一次呢？一个方案就是让一个线程持续不断地检查`socket`是否可读，然后
+柯杜师马上调用`wake()`。然而，这样子效率太低了，那对于每一个阻塞IO的future我们都需要
+独立的线程。这会大大降低我们异步代码的效率。
 
-In practice, this problem is solved through integration with an IO-aware
-system blocking primitive, such as `epoll` on Linux, `kqueue` on FreeBSD and
-Mac OS, IOCP on Windows, and `port`s on Fuchsia (all of which are exposed
-through the cross-platform Rust crate [`mio`]). These primitives all allow
-a thread to block on multiple asynchronous IO events, returning once one of
-the events completes. In practice, these APIs usually look something like
-this:
+实践时，这个问题是通过整合IO感知系统阻塞元件（IO-aware system blocking primitive），
+像Linux上的`epoll`, FreeBSD和Mac OS的`kqueue`, Windows的IOCP，以及Fuchsia的`poart`
+(以上这些都通过了跨平台Rust库[`mio`]暴露出来)。这个元件全都允许线程阻塞多个异步IO事件，
+一旦这些事件中有一个完成了，元件就会返回。实际上，这些API通常看着像这样：
 
 ```rust,no_run
 struct IoBlocker {
@@ -75,10 +67,8 @@ let event = io_blocker.block();
 println!("Socket {:?} is now {:?}", event.id, event.signals);
 ```
 
-Futures executors can use these primitives to provide asynchronous IO objects
-such as sockets that can configure callbacks to be run when a particular IO
-event occurs. In the case of our `SocketRead` example above, the
-`Socket::set_readable_callback` function might look like the following pseudocode:
+future执行器能够用这些元件来提供异步IO对象，例如可配置回调在特定IO时间出现时执行的socket。
+像上面我们的`SocketRead`例子，`Socket::set_readable_callback`函数可能看起来像以下伪代码：
 
 ```rust,no_run
 impl Socket {
@@ -103,10 +93,8 @@ impl Socket {
 }
 ```
 
-We can now have just one executor thread which can receive and dispatch any
-IO event to the appropriate `Waker`, which will wake up the corresponding
-task, allowing the executor to drive more tasks to completion before returning
-to check for more IO events (and the cycle continues...).
+我们现在只需要一个执行器线程来接收并分发任何IO事件给特定`Waker`，这些`Waker`会唤醒相应
+任务，允许执行器在返回来检查更多IO事件之前，驱动更多任务完成。
 
-[The `Future` Trait]: ./02_future.md
+[`Future`特质]: ./02_future.md
 [`mio`]: https://github.com/tokio-rs/mio
