typofix: fixes typo shown in # 14
closes #14

--- a/src_zh/02_execution/05_io.md
+++ b/src_zh/02_execution/05_io.md
@@ -10,7 +10,7 @@
 再次可读时唤醒它的任务。然而，从这个例子里我们不能很清楚知道`Socket`类型是如何实现的，
 尤其是不了解`set_readable_callback`函数如何工作。我们要怎样安排`lw.wake()`方法在一旦
 socket变得可用时调用一次呢？一个方案就是让一个线程持续不断地检查`socket`是否可读，然后
-柯杜师马上调用`wake()`。然而，这样子效率太低了，那对于每一个阻塞IO的future我们都需要
+可读时马上调用`wake()`。然而，这样子效率太低了，那对于每一个阻塞IO的future我们都需要
 独立的线程。这会大大降低我们异步代码的效率。
 
 实践时，这个问题是通过整合IO感知系统阻塞元件（IO-aware system blocking primitive），
