--- a/src/02_execution/05_io.md
+++ b/src/02_execution/05_io.md
@@ -3,7 +3,7 @@
 In the previous section on [The `Future` Trait], we discussed this example of
 a future that performed an asynchronous read on a socket:
 
-```rust
+```rust,ignore
 {{#include ../../examples/02_02_future_trait/src/lib.rs:socket_read}}
 ```
 
@@ -26,9 +26,9 @@ a thread to block on multiple asynchronous IO events, returning once one of
 the events completes. In practice, these APIs usually look something like
 this:
 
-```rust
+```rust,ignore
 struct IoBlocker {
-    ...
+    /* ... */
 }
 
 struct Event {
@@ -41,7 +41,7 @@ struct Event {
 
 impl IoBlocker {
     /// Create a new collection of asynchronous IO events to block on.
-    fn new() -> Self { ... }
+    fn new() -> Self { /* ... */ }
 
     /// Express an interest in a particular IO event.
     fn add_io_event_interest(
@@ -54,10 +54,10 @@ impl IoBlocker {
         /// which an event should be triggered, paired with
         /// an ID to give to events that result from this interest.
         event: Event,
-    ) { ... }
+    ) { /* ... */ }
 
     /// Block until one of the events occurs.
-    fn block(&self) -> Event { ... }
+    fn block(&self) -> Event { /* ... */ }
 }
 
 let mut io_blocker = IoBlocker::new();
@@ -80,7 +80,7 @@ such as sockets that can configure callbacks to be run when a particular IO
 event occurs. In the case of our `SocketRead` example above, the
 `Socket::set_readable_callback` function might look like the following pseudocode:
 
-```rust
+```rust,ignore
 impl Socket {
     fn set_readable_callback(&self, waker: Waker) {
         // `local_executor` is a reference to the local executor.
