--- a/translations/ru/02_execution/05_io.md
+++ b/translations/ru/02_execution/05_io.md
@@ -1,15 +1,15 @@
 # Исполнители и системный ввод/вывод
 
-В главе ["Типаж `Future`"](./02_future.md), мы обсуждали такой
-пример `future`, которая выполняет асинхронное чтение сокета:
+В главе ["Типаж `Future`"], мы обсуждали футуру, которая выполняет асинхронное
+чтение сокета:
 
 ```rust
 {{#include ../../../examples/02_02_future_trait/src/lib.rs:socket_read}}
 ```
 
-Эта `future` читает доступные данные из сокета и если доступных
-данных нет, то она будет передана исполнителю с запросом
-активирования задачи, если сокет снова станет читаемым. Однако,
+Эта футура читает из сокета доступные данные и если таковых нет,
+то она передаётся исполнителю с запросом
+активирования задачи, когда сокет снова станет читаемым. Однако,
 из текущего примера не ясна реализация типа
 `Socket` и, в частности, не совсем очевидно как
 работает функция `set_readable_callback`. Как мы
@@ -19,15 +19,15 @@
 читаемым, вызывая при необходимости метод
 `wake()`. Тем не менее, такой подход будет весьма не
 эффективным, так как он требует отдельного потока для каждой
-блокирующей IO `future`. Это значительно снизит эффективность
+блокирующей IO футуры. Это значительно снизит эффективность
 нашего асинхронного кода.
 
 На практике эта проблема решается при помощи интеграции с
-IO - зависимыми системными блокирующими примитивами такими,
+IO-зависимыми системными блокирующими примитивами такими,
 как `epoll` в Linux, `kqueue` во FreeBSD и
 Mac OS, `IOCP` в Windows и `port` в Fuchsia (все они
 предоставляются при помощи кроссплатформенного Rust-пакета
-[`mio`](https://github.com/tokio-rs/mio)). Все эти примитивы позволяют потоку
+[`mio`]). Все эти примитивы позволяют потоку
 заблокироваться с несколькими асинхронными IO-событиями,
 возвращая одно из завершённых событий. На практике эти API
 выглядят примерно так:
@@ -38,18 +38,18 @@ struct IoBlocker {
 }
 
 struct Event {
-    // ID уникально идентифицирующее событие, которое уже произошло и на которое мы подписались.
+    // ID уникально идентифицирующий событие, которое уже произошло и на которое мы подписались
     id: usize,
 
-    // Набор сигналов для ожидания или которые произошли.
+    // Набор сигналов, которые мы ожидаем или которые произошли
     signals: Signals,
 }
 
 impl IoBlocker {
-    /// Создаём новую коллекцию асинхронных IO-событий для блокировки.
+    /// Создаём новую коллекцию асинхронных IO-событий для блокировки
     fn new() -> Self { ... }
 
-    /// Проявим интерес к определённому IO-событию.
+    /// Подпишемся на определённое IO-событие.
     fn add_io_event_interest(
         &self,
 
@@ -57,12 +57,12 @@ impl IoBlocker {
         io_object: &IoObject,
 
         /// Набор сигналов, которые могут применяться к `io_object`,
-        /// для которых должно быть инициировано событие, в паре с
-        /// ID, которые передадутся событиям, получившимся в результате нашего интереса.
+        /// для которого должно быть инициировано событие, в паре с
+        /// ID, которые передадутся событиям, получившимся в результате нашей подписки.
         event: Event,
     ) { ... }
 
-    /// Заблокируется до появления одного из событий.
+    /// Заблокируется до появления одного из событий
     fn block(&self) -> Event { ... }
 }
 
@@ -81,15 +81,17 @@ let event = io_blocker.block();
 println!("Socket {:?} is now {:?}", event.id, event.signals);
 ```
 
-Исполнители `Future` могут использовать эти примитивы для предоставления асинхронных объектов ввода-вывода,
-таких как сокеты, которые могут настроить обратные вызовы для запуска при определённом событии ввода-вывода. В случае нашего примера `SocketRead` выше,
-`Socket::set_readable_callback` функция может выглядеть следующим псевдокодом:
+Исполнители футур могут использовать эти примитивы для предоставления
+асинхронных объектов ввода-вывода, таких как сокеты, которые могут настроить
+обратные вызовы для запуска при определённом IO-событии. В случае нашего примера
+c `SocketRead`, функция `Socket::set_readable_callback` может выглядеть
+следующим псевдокодом:
 
 ```rust
 impl Socket {
     fn set_readable_callback(&self, waker: Waker) {
-        // `local_executor` это ссылка на локальный исполнитель.
-        // это может быть предусмотрено при создании сокета,
+        // `local_executor` является ссылкой на локальный исполнитель.
+        // Это может быть предусмотрено при создании сокета,
         // большинство реализаций исполнителей делают это через локальный поток, так удобнее.
         let local_executor = self.local_executor;
 
@@ -97,7 +99,7 @@ impl Socket {
         let id = self.id;
 
         // Сохраним `waker` в данных исполнителя,
-        // чтобы его можно было вызвать после того как будет получено событие.
+        // чтобы его можно было вызвать после того, как будет получено событие.
         local_executor.event_map.insert(id, waker);
         local_executor.add_io_event_interest(
             &self.socket_file_descriptor,
@@ -107,7 +109,12 @@ impl Socket {
 }
 ```
 
-Теперь у нас может быть только один поток исполнителя, который может принимать и отправлять любые
-события ввода-вывода в соответствующий `Waker`, который разбудит соответствующую
-задачу, позволяющая исполнителю довести больше задач до завершения перед возвратом,
-чтобы проверить больше событий ввода-вывода (и цикл продолжается...).
+Теперь у нас может быть только один поток исполнителя, который может принимать и
+отправлять любые события ввода-вывода в нужный `Waker`, который разбудит
+соответствующую задачу, позволяющая исполнителю довести больше задач до
+завершения перед возвратом к проверке новых событий ввода-вывода (и цикл
+продолжается...).
+
+
+["Типаж `Future`"]: ./02_future.md
+[`mio`]: https://github.com/tokio-rs/mio
