Fix typo: `lw.wake()` => `wake()`

--- a/src/02_execution/05_io.md
+++ b/src/02_execution/05_io.md
@@ -11,7 +11,7 @@ This future will read available data on a socket, and if no data is available,
 it will yield to the executor, requesting that its task be awoken when the
 socket becomes readable again. However, it's not clear from this example how
 the `Socket` type is implemented, and in particular it isn't obvious how the
-`set_readable_callback` function works. How can we arrange for `lw.wake()`
+`set_readable_callback` function works. How can we arrange for `wake()`
 to be called once the socket becomes readable? One option would be to have
 a thread that continually checks whether `socket` is readable, calling
 `wake()` when appropriate. However, this would be quite inefficient, requiring
