Capitalize the first letter in comment

--- a/src/02_execution/05_io.md
+++ b/src/02_execution/05_io.md
@@ -84,7 +84,7 @@ event occurs. In the case of our `SocketRead` example above, the
 impl Socket {
     fn set_readable_callback(&self, waker: Waker) {
         // `local_executor` is a reference to the local executor.
-        // this could be provided at creation of the socket, but in practice
+        // This could be provided at creation of the socket, but in practice
         // many executor implementations pass it down through thread local
         // storage for convenience.
         let local_executor = self.local_executor;
